--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
     list-style: none;
 }
 
+a {
+    color: royalblue;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -46,31 +50,26 @@ header button:hover {
     padding-top: 4rem;
 }
 
-.login-module,
-.change-password-module,
-.anon-login-module {
+[class$="module"] {
     width: 100%;
     max-width: 20rem;
     align-self: center;
     justify-self: center;
 }
 
-.login-form,
-.change-password-form {
+[class$="module"] [class$="form"] {
     display: flex;
     flex-direction: column;
     padding: 1rem;
 }
 
-.login-form div,
-.change-password-form div {
+[class$="module"] [class$="form"] div {
     display: flex;
     flex-direction: column;
     position: relative;
 }
 
-.login-form div:not(:last-child),
-.change-password-form div:not(:last-child){
+[class$="module"] [class$="form"] div:not(:last-child) {
     margin-bottom: 1rem;
 }
 
@@ -84,25 +83,30 @@ header button:hover {
     text-align: center;
     font-weight: bold;
 }
-.error {
+
+[class$="error"] {
     color: darkred;
     font-weight: bold;
 }
 
-.success {
+[class$="success"] {
     color: lawngreen;
     font-weight: bold;
 }
 
-form div .error {
+[class$="module"] [class$="form"] div .line-form-error {
     position: absolute;
     left: calc(100% + 1rem);
     bottom: 0;
     width: max-content;
 }
 
-.login-other-options div {
+[class$="module"] > [class*="options"] > div {
     margin-bottom: 1rem;
+}
+
+[class$="module"] > [class*="options"] > div > p{
+    margin-bottom: 0.5rem;
 }
 
 .center {
