--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,24 @@ a {
     color: royalblue;
 }
 
+button {
+    cursor: pointer;
+}
+
 header {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px lightgrey solid;
+}
+
+header h1 {
+    font-size: 1.5rem;
+    padding: 0 1rem;
+}
+
+header > div {
+    display: flex;
+    align-items: center;
 }
 
 header ul {
@@ -36,6 +50,8 @@ header button {
     border: none;
     padding: 1rem;
     font-size: 1em;
+    color: royalblue;
+    text-decoration-line: underline;
 }
 
 header a:hover,
@@ -47,7 +63,7 @@ header button:hover {
     display: flex;
     flex-direction: column;
     /*justify-content: center;*/
-    padding-top: 4rem;
+    padding-top: 2rem;
 }
 
 [class$="module"] {
@@ -90,15 +106,9 @@ header button:hover {
 }
 
 [class$="success"] {
-    color: lawngreen;
+    color: limegreen;
+    /*color: lawngreen;*/
     font-weight: bold;
-}
-
-[class$="module"] [class$="form"] div .line-form-error {
-    position: absolute;
-    left: calc(100% + 1rem);
-    bottom: 0;
-    width: max-content;
 }
 
 [class$="module"] > [class*="options"] > div {
@@ -114,5 +124,62 @@ header button:hover {
 }
 
 .wrapper {
-    padding: 2rem 4rem;
+    padding: 2rem;
+}
+
+.wrapper > section,
+.wrapper > article {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 900px;
+}
+
+article section {
+    margin-bottom: 1rem;
+}
+
+section h2,
+article h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+article h3 {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+
+article > ul,
+article section > ul,
+article p {
+    margin-bottom: 0.5rem;
+}
+
+article ul > li {
+    margin-top: 0.2rem;
+}
+
+article ul > li > span {
+    display: flex;
+}
+
+article ul > li > span > span {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+article ul > li > span > span:after {
+    content: '';
+    border-bottom: 2px dotted lightgrey;
+    flex:1;
+    margin: 0 10px;
+}
+
+ul.square {
+    padding-left: 40px;
+}
+ul.square > li {
+    list-style-type: square;
+    list-style-position: outside;
 }
