--- a/steg2/css/style.css
+++ b/steg2/css/style.css
@@ -17,8 +17,11 @@ button {
 
 header {
     display: flex;
-    justify-content: space-between;
     border-bottom: 1px lightgrey solid;
+}
+
+header nav {
+    flex-grow: 1;
 }
 
 header h1 {
@@ -26,19 +29,15 @@ header h1 {
     padding: 0 1rem;
 }
 
-header > div {
+header>div {
     display: flex;
     align-items: center;
-}
-
-header ul {
-    display: flex;
-    list-style: none;
 }
 
 header li {
     display: block;
 }
+
 header a {
     display: block;
     padding: 1rem;
@@ -54,9 +53,69 @@ header button {
     text-decoration-line: underline;
 }
 
-header a:hover,
-header button:hover {
-    background: lightgrey;
+#navbar-toggle img {
+    display: block;
+    aspect-ratio: 1;
+    width: 3rem;
+}
+
+#navbar-toggle {
+    display: block;
+    margin-left: auto;
+    margin-right: 1rem;
+    height: 3rem;
+    padding: 0;
+}
+
+header nav ul {
+    display: none;
+    list-style: none;
+    position: absolute;
+    top: 3rem;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    background: white;
+    z-index: 20;
+}
+
+header nav li {
+    border-top: 1px solid lightgray;
+}
+
+header nav li:last-child {
+    border-bottom: 1px solid lightgray;
+}
+
+@media only screen and (min-width: 800px) {
+    #navbar-toggle {
+        display: none;
+    }
+
+    header nav ul {
+        display: flex !important;
+        position: static;
+        flex-direction: row;
+        background: unset;
+    }
+
+    .nav-right {
+        margin-left: auto;
+    }
+
+    header nav li {
+        border: none;
+    }
+
+    header nav li:last-child {
+        border: none;
+    }
+
+    header a:hover,
+    header button:hover {
+        background: lightgrey;
+    }
 }
 
 .module-wrapper {
@@ -111,11 +170,11 @@ header button:hover {
     font-weight: bold;
 }
 
-[class$="module"] > [class*="options"] > div {
+[class$="module"]>[class*="options"]>div {
     margin-bottom: 1rem;
 }
 
-[class$="module"] > [class*="options"] > div > p{
+[class$="module"]>[class*="options"]>div>p {
     margin-bottom: 0.5rem;
 }
 
@@ -127,8 +186,8 @@ header button:hover {
     padding: 2rem;
 }
 
-.wrapper > section,
-.wrapper > article {
+.wrapper>section,
+.wrapper>article {
     margin-left: auto;
     margin-right: auto;
     max-width: 900px;
@@ -149,37 +208,38 @@ article h3 {
     margin-bottom: 0.5rem;
 }
 
-article > ul,
-article section > ul,
+article>ul,
+article section>ul,
 article p {
     margin-bottom: 0.5rem;
 }
 
-article ul > li {
+article ul>li {
     margin-top: 0.2rem;
 }
 
-article ul > li > span {
+article ul>li>span {
     display: flex;
 }
 
-article ul > li > span > span {
+article ul>li>span>span {
     flex: 1;
     display: flex;
     align-items: center;
 }
 
-article ul > li > span > span:after {
+article ul>li>span>span:after {
     content: '';
     border-bottom: 2px dotted lightgrey;
-    flex:1;
+    flex: 1;
     margin: 0 10px;
 }
 
 ul.square {
     padding-left: 40px;
 }
-ul.square > li {
+
+ul.square>li {
     list-style-type: square;
     list-style-position: outside;
 }
